tests/should-fail/constant-fn-2.j
constant function x takes nothing returns integer
    local integer y
    return y
endfunction
